# education

./: .python-version  README.md  dbt_project.yml  pyproject.toml  test.py
Leetcode/Easy/1050. Actors and Directors Who Cooperated At Least Three Times/: Solution.sql
Leetcode/Easy/1084. Sales Analysis III/: Solution.sql
Leetcode/Easy/1148. Article Views I/: Solution.sql
Leetcode/Easy/1407. Top Travellers/: Solution.sql
Leetcode/Easy/1527. Patients With a Condition/: Solution.sql
Leetcode/Easy/1581. Customer Who Visited but Did Not Make Any Transactions/: Solution.sql
Leetcode/Easy/1587. Bank Account Summary II/: Solution.sql
Leetcode/Easy/1667. Fix Names in a Table/: Solution.sql
Leetcode/Easy/1729. Find Followers Count/: Solution.sql
Leetcode/Easy/182. Duplicate Emails/: Solution.sql
Rebrain/Python/: main.py  py10.py  py11.py  py12.py  py13.py  py4.py  py5.py  py6.py  py7.py  py8.py
Stepik/Kind, Kind Python (OOP)/: 1.7.10.py  1.7.8.py  1.7.9.py  2.1.10.py  2.1.4.py  2.1.7.py  2.1.8.py  2.2.7.py  2.2.9.py  3.1.10.py  3.1.7.py  3.1.8.py  3.1.9.py  4.3.3.py  4.3.4.py  4.3.5.py  for_testx.py
Stepik/Kind, Kind Python (Start Sergey Balakirev)/: 5.1.7.py  5.1.8.py  5.4.2.py  5.6.4.py  5.6.5.py  5.6.6.py  5.8.3.py  5.9.1.py  5.9.2.py  6.1.7.py  6.1.9.py  6.2.7.py  6.4.5.py  7.1.6.py  7.1.8.py  7.11.2.py  7.11.3.py  7.11.5.py  7.12.1.py  7.12.2.py  7.12.3.py  7.12.4.py  7.2.4.py  7.5.5.py
models/: customers.sql  fct_orders.sql  schema.yml  sources.yml
models/stage/: stg_customers.sql  stg_payments.sql
tests/: assert_positive_value_for_total_amount.sql
(+132 files in other folders)
