[tool.poetry]
name = "education"
version = "0.1.0"
description = ""
authors = ["Petr Chernyakov <petr.chernyakov@raiffeisen.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
certifi = "^2024.2.2"
asyncio = "^3.4.3"
confluent-kafka = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
